Update instructions to fit refactor

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <form id="addArtist">
       <label>
         Name
-        <input type="text" name="name" />
+        <input type="text" name="artistName" />
       </label>
       <label>
         Description
